--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -1,6 +1,17 @@
 name: Publish Python 🐍 distribution 📦 to PyPI and TestPyPI
 
-on: push
+on:
+  push:
+    branches:
+      - main  # or any other branches you want the build job to run on
+    tags:
+      - 'v*'  # Run on tag pushes for version releases
+  workflow_dispatch:
+    inputs:
+      publishToTestPyPI:
+        description: 'Publish to TestPyPI (Set to true to publish)'
+        required: true
+        default: 'false'
 
 jobs:
   build:
@@ -28,8 +39,7 @@ jobs:
         path: dist/
 
   publish-to-pypi:
-    name: >-
-      Publish Python 🐍 distribution 📦 to PyPI
+    name: Publish Python 🐍 distribution 📦 to PyPI
     if: startsWith(github.ref, 'refs/tags/')  # only publish to PyPI on tag pushes
     needs:
     - build
@@ -50,9 +60,7 @@ jobs:
       uses: pypa/gh-action-pypi-publish@release/v1
 
   github-release:
-    name: >-
-      Sign the Python 🐍 distribution 📦 with Sigstore
-      and upload them to GitHub Release
+    name: Sign the Python 🐍 distribution 📦 with Sigstore and upload them to GitHub Release
     needs:
     - publish-to-pypi
     runs-on: ubuntu-latest
@@ -94,6 +102,7 @@ jobs:
 
   publish-to-testpypi:
     name: Publish Python 🐍 distribution 📦 to TestPyPI
+    if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.publishToTestPyPI == 'true' }}
     needs:
     - build
     runs-on: ubuntu-latest
